--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.8"
 
 services:
   mongo:
-    image: mongo:6.0
+    image: mongo:4.4
     container_name: graylog-mongo
     restart: unless-stopped
     volumes:
@@ -24,26 +24,26 @@ services:
     restart: unless-stopped
 
   graylog:
-    image: graylog/graylog:5.1
+    image: graylog/graylog:4.3
     container_name: graylog
     restart: unless-stopped
     depends_on:
       - mongo
       - elasticsearch
-    entrypoint: /usr/bin/tini -- wait-for-it elasticsearch:9200 -- /docker-entrypoint.sh
     environment:
       - GRAYLOG_PASSWORD_SECRET=${GRAYLOG_PASSWORD_SECRET}
       - GRAYLOG_ROOT_PASSWORD_SHA2=${GRAYLOG_ROOT_PASSWORD_SHA2}
       - GRAYLOG_HTTP_BIND_ADDRESS=0.0.0.0:9000
       - GRAYLOG_HTTP_EXTERNAL_URI=http://localhost:9000/
     ports:
-      - "9000:9000"  # Web UI
-      - "1514:1514"   # Syslog TCP
-      - "1514:1514/udp" # Syslog UDP
-      - "12201:12201" # GELF TCP
-      - "12201:12201/udp" # GELF UDP
+      - "9000:9000"
+      - "1514:1514"
+      - "1514:1514/udp"
+      - "12201:12201"
+      - "12201:12201/udp"
     volumes:
       - graylog_data:/usr/share/graylog/data
+
 
 volumes:
   mongo_data:
